--- a/Centum_Learning/assets/css/style.css
+++ b/Centum_Learning/assets/css/style.css
@@ -587,6 +587,8 @@ section {
   text-decoration: none;
 }
 
+
+
 /*--------------------------------------------------------------
 # dropdown
 --------------------------------------------------------------*/
@@ -638,7 +640,127 @@ section {
     justify-content: flex-end;
   }
 }
+/*--------------------------------------------------------------
+# She_Arise1
+--------------------------------------------------------------*/
+.She_Arise1 {
+  padding-top: 80px;
+}
 
+.She_Arise1 .content h3 {
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.She_Arise1 .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.She_Arise1 .content ul li {
+  padding-left: 28px;
+  position: relative;
+}
+
+.She_Arise1 .content ul li+li {
+  margin-top: 10px;
+}
+
+.She_Arise1 .content ul i {
+  position: absolute;
+  left: 0;
+  top: 2px;
+  font-size: 20px;
+  color: #ef6603;
+  line-height: 1;
+}
+
+.She_Arise1 .content p:last-child {
+  margin-bottom: 0;
+}
+
+.She_Arise1 .content .btn-learn-more {
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 5px;
+  transition: 0.3s;
+  line-height: 1;
+  color: #ef6603;
+  animation-delay: 0.8s;
+  margin-top: 6px;
+  border: 2px solid #ef6603;
+}
+
+.She_Arise1 .content .btn-learn-more:hover {
+  background: #ef6603;
+  color: #fff;
+  text-decoration: none;
+}
+
+/*--------------------------------------------------------------
+# Accenture
+--------------------------------------------------------------*/
+.Accenture {
+  padding-top: 80px;
+}
+
+.Accenture .content h3 {
+  font-weight: 600;
+  font-size: 26px;
+}
+
+.Accenture .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.Accenture .content ul li {
+  padding-left: 28px;
+  position: relative;
+}
+
+.Accenture .content ul li+li {
+  margin-top: 10px;
+}
+
+.Accenture .content ul i {
+  position: absolute;
+  left: 0;
+  top: 2px;
+  font-size: 20px;
+  color: #ef6603;
+  line-height: 1;
+}
+
+.Accenture .content p:last-child {
+  margin-bottom: 0;
+}
+
+.Accenture .content .btn-learn-more {
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 32px;
+  border-radius: 5px;
+  transition: 0.3s;
+  line-height: 1;
+  color: #ef6603;
+  animation-delay: 0.8s;
+  margin-top: 6px;
+  border: 2px solid #ef6603;
+}
+
+.Accenture .content .btn-learn-more:hover {
+  background: #ef6603;
+  color: #fff;
+  text-decoration: none;
+}
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
